# archivefile

./: NOTES.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  lint-and-type-check.yml  release.yml  tests.yml
src/archivefile/: __init__.py  _core.py  _errors.py  _models.py  _types.py  _utils.py
src/archivefile/_adapters/: _abc.py  _base.py  _rar.py  _sevenzip.py  _tar.py  _zip.py
src/archivefile/_impl/: _abc.py  _rar.py  _sevenzip.py  _tar.py  _zip.py
tests/: conftest.py  helpers.py  test_exceptions.py  test_extract.py  test_member.py  test_read.py  test_utils.py
