[project]
name = "archivefile"
version = "1.0.0"
description = "Unified interface for tar, zip, sevenzip, and rar files"
authors = [{ name = "Ravencentric", email = "me@ravencentric.cc" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Unlicense"
keywords = [
    "archive",
    "archivefile",
    "zipfile",
    "tarfile",
    "sevenzip",
    "rarfile",
]
classifiers = [
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Compression",
    "Typing :: Typed",
]
dependencies = [
    "rarfile>=4.2",
    "py7zr>=0.21.1",
    "pydantic>=2.8.2",
    "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
bigtree = ["bigtree>=0.19.3"]
rich = ["rich>=13.7.1"]
all = ["bigtree>=0.19.3", "rich>=13.7.1"]

[project.urls]
Repository = "https://github.com/Ravencentric/archivefile"
Documentation = "https://archivefile.ravencentric.cc"

[dependency-groups]
docs = [
  "mkdocs-autorefs>=1.3.0",
  "mkdocs-material>=9.5.50",
  "mkdocstrings[python]>=0.27.0",
]
test = [
  "coverage[toml]>=7.6.10",
  "pytest>=8.3.4",
]
lint = ["mypy>=1.16.0", "ruff>=0.11.12", { include-group = "test" }]
dev = [
  { include-group = "docs" },
  { include-group = "test" },
  { include-group = "lint" },
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
strict = true
pretty = true

[[tool.mypy.overrides]]
module = ["rarfile"]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:tarfile"]

[tool.coverage.run]
omit = ["src/archivefile/_version.py", "tests/*"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",         # Only used for type-hints
    "raise NotImplementedError", # Can't test what's not implemented
    "def print_table",           # Function that pretty much calls another third party function
    "def print_tree",            # Function that pretty much calls another third party function
    "def __repr__",              # For debugging
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
