[project]
name = "archivefile"
version = "1.0.0"
description = "Unified interface for tar, zip, sevenzip, and rar files"
authors = [{ name = "Ravencentric", email = "me@ravencentric.cc" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Unlicense"
keywords = [
  "archive",
  "archivefile",
  "zipfile",
  "tarfile",
  "sevenzip",
  "7z",
  "rarfile",
]
classifiers = [
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Archiving",
  "Topic :: System :: Archiving :: Compression",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
rar = ["rarfile>=4.2"]
7z = ["py7zr>=1.0.0"]

[project.urls]
Repository = "https://github.com/Ravencentric/archivefile"
Documentation = "https://archivefile.ravencentric.cc"

[dependency-groups]
docs = [
  "mkdocs-autorefs>=1.3.0",
  "mkdocs-material>=9.5.50",
  "mkdocstrings[python]>=0.27.0",
]
test = ["coverage[toml]>=7.6.10", "pytest>=8.3.4"]
lint = [
  "mypy>=1.16.0",
  "ruff>=0.11.12",
  "typing-extensions>=4.12.2",
  { include-group = "test" },
]
dev = [
  { include-group = "docs" },
  { include-group = "test" },
  { include-group = "lint" },
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
  "I",      # https://docs.astral.sh/ruff/rules/#isort-i
  "RUF",    # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
  "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "N",      # https://docs.astral.sh/ruff/rules/#pep8-naming-n
  "D4",     # https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "B",      # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "FBT",    # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
  "C4",     # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
  "EM",     # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
  "ISC",    # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
  "PIE",    # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
  "RET",    # https://docs.astral.sh/ruff/rules/#flake8-raise-rse
  "PL",     # https://docs.astral.sh/ruff/rules/#pylint-pl
  "E",      # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "W",      # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "FURB",   # https://docs.astral.sh/ruff/rules/#refurb-furb
  "TC",     # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
  "TID253", # https://docs.astral.sh/ruff/rules/banned-module-level-imports/
]
fixable = ["ALL"]

[tool.ruff.lint.flake8-tidy-imports]
# These modules are optional dependencies,
# so we don't want to import them at the module level
banned-module-level-imports = ["py7zr", "rarfile"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["D", "FBT", "PL", "C416"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
strict = true
pretty = true
files = ["src/**/*.py", "tests/**/*.py"]
enable_error_code = ["ignore-without-code"]

[[tool.mypy.overrides]]
module = ["rarfile"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:", # Only used for type-hints
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
